# Tranfer_hook

./: .gitignore  Anchor.toml  README.md  mint-keypair.json  package-lock.json  package.json  price_validation_transfer_hook-keypair.json  program-keypair.json  rust-toolchain.toml  transfer-hook-research.md  tsconfig.json
programs/earthquake-insurance-hook/: Cargo.toml
programs/earthquake-insurance-hook/src/: error.rs  instruction.rs  lib.rs
programs/price-validation-transfer-hook/: Cargo.toml
programs/price-validation-transfer-hook/src/: error.rs  instruction.rs  lib.rs
src/: transferHook.js
src/routes/: price.js  transfer.js
src/scripts/: findPhonePriceInSwitchboard.js  testPhoneSpecs.js  testPriceApi.js 16-39-27-037.js  testStockxApi.js  testSwitchboard.js  testSwitchboardAggregator.js  testSwitchboardV2.js  updatePhonePriceOnDemand.js
src/services/: fixedPriceService.js
tests/: create_token_and_full_test.js  mint-keypair.json
