[package]
name = "earthquake-insurance-hook"
version = "0.1.0"
description = "Solana Transfer Hook for Earthquake Insurance"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "earthquake_insurance_hook"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.0"
anchor-spl = "0.31.0"
thiserror = "1.0.43"
num-derive = "0.4"
num-traits = "0.2"
switchboard-solana = "0.30.4"
switchboard-v2 = "0.4.0"
spl-token = { version = "4.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "2.0.1", features = ["no-entrypoint"] }
spl-transfer-hook-interface = "0.5.0"
spl-tlv-account-resolution = "0.4.0"
spl-type-length-value = "0.3.0"
borsh = "0.10.3"
solana-program = "1.18.1"
bytemuck = { version = "1.4.0", features = ["derive", "min_const_generics"] } 