[package]
name = "price-validation-transfer-hook"
version = "0.1.0"
edition = "2021"
description = "Transfer Hook program để xác thực giá dựa trên oracle offchain"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.0"
# Không sử dụng anchor-spl để tránh xung đột phiên bản
thiserror = "1.0.43"
num-derive = "0.4"
num-traits = "0.2"
switchboard-solana = "0.30.4"
spl-token = { version = "4.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "1.0", features = ["no-entrypoint"] }
spl-transfer-hook-interface = "0.4.0"
spl-tlv-account-resolution = "0.4.0"
spl-type-length-value = "0.3.0"
borsh = "0.10.3"
solana-program = "1.18.0" 